[package]
name = "pagerank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = "0.12.0"
rand = { version = "0.8", features = ["small_rng"] }
clap = { version = "4.0.29", features = ["derive"] }

[[bin]]
name = "pagerank_iteration"
path = "src/bin/pagerank_iteration.rs"
